methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:12: error: not found: value SetCXouleurBrosse
  setCouleurBrosse(Color.YELLOW);faireV();setCouleurBrosse(Color.RED);faireV();SetCXouleurBrosse(Color.BLUE);faireV();setCouleurBrosse(Color.GREEN)
                                                                               ^